# web3agent

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  pyproject.toml  render.yaml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  security.yml
.streamlit/: config.toml
src/web3agent/: __init__.py  agent.py  app.py  mcp_client.py
src/web3agent/static/: cyberpunk.css
src/web3agent/ui/: __init__.py  chat.py
tests/: __init__.py  test_chat_flow.py  test_connection.py  test_llm.py  test_tool_coercion.py
